// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract-json-schema should be able to rename top-level names 1`] = `
{
  "definitions": {
    "Foo": {
      "type": "number",
    },
    "Foo_2": {
      "type": "string",
    },
  },
}
`;

exports[`extract-json-schema should call non-decorated validator schemas 'Unknown' 1`] = `
{
  "definitions": {
    "Foo": {
      "type": "number",
    },
    "Unknown_1": {
      "type": "string",
    },
  },
}
`;

exports[`extract-json-schema should ignore non-decorated validator schemas 1`] = `
{
  "definitions": {
    "Foo": {
      "type": "number",
    },
  },
}
`;

exports[`extract-json-schema should keep references in lookup table 1`] = `
{
  "definitions": {
    "Foo": {
      "type": "number",
    },
  },
}
`;

exports[`extract-json-schema should keep references in lookup table 2`] = `
{
  "type": "number",
}
`;

exports[`extract-json-schema should keep references in lookup table 3`] = `
{
  "anyOf": [
    {
      "type": "string",
    },
    {
      "type": "boolean",
    },
  ],
}
`;

exports[`extract-json-schema should keep references in lookup table 4`] = `
{
  "anyOf": [
    {
      "type": "string",
    },
    {
      "$ref": "#/definitions/Foo",
    },
  ],
}
`;

exports[`extract-json-schema should produce proper definitions for referenced schemas (using method no-refs) 1`] = `
{
  "definitions": {
    "Bar": {
      "description": "Desc",
      "examples": [
        "Ex",
      ],
      "properties": {
        "bak": {
          "type": "number",
        },
        "bar": {
          "exclusiveMinimum": 17,
          "type": "number",
        },
        "baz": {
          "type": "number",
        },
        "foo": {
          "description": "Description",
          "examples": [
            "Example",
          ],
          "properties": {
            "foo": {
              "const": "bar",
              "type": "string",
            },
          },
          "title": "Title",
          "type": "object",
        },
      },
      "required": [
        "bar",
      ],
      "title": "T",
      "type": "object",
    },
    "Foo": {
      "description": "Description",
      "examples": [
        "Example",
      ],
      "properties": {
        "foo": {
          "const": "bar",
          "type": "string",
        },
      },
      "title": "Title",
      "type": "object",
    },
  },
}
`;

exports[`extract-json-schema should produce proper definitions for referenced schemas (using method provided) 1`] = `
{
  "definitions": {
    "Bar": {
      "description": "Desc",
      "examples": [
        "Ex",
      ],
      "properties": {
        "bak": {
          "type": "number",
        },
        "bar": {
          "exclusiveMinimum": 17,
          "type": "number",
        },
        "baz": {
          "type": "number",
        },
        "foo": {
          "$ref": "#/definitions/Foo",
        },
      },
      "required": [
        "bar",
      ],
      "title": "T",
      "type": "object",
    },
    "Foo": {
      "description": "Description",
      "examples": [
        "Example",
      ],
      "properties": {
        "foo": {
          "const": "bar",
          "type": "string",
        },
      },
      "title": "Title",
      "type": "object",
    },
  },
}
`;

exports[`extract-json-schema should produce proper definitions for referenced schemas (using method ref-all) 1`] = `
{
  "definitions": {
    "Bar": {
      "description": "Desc",
      "examples": [
        "Ex",
      ],
      "properties": {
        "bak": {
          "$ref": "#/definitions/Baz",
        },
        "bar": {
          "exclusiveMinimum": 17,
          "type": "number",
        },
        "baz": {
          "$ref": "#/definitions/Baz",
        },
        "foo": {
          "$ref": "#/definitions/Foo",
        },
      },
      "required": [
        "bar",
      ],
      "title": "T",
      "type": "object",
    },
    "Baz": {
      "type": "number",
    },
    "Foo": {
      "description": "Description",
      "examples": [
        "Example",
      ],
      "properties": {
        "foo": {
          "const": "bar",
          "type": "string",
        },
      },
      "title": "Title",
      "type": "object",
    },
  },
}
`;

exports[`extract-json-schema should produce two (referenced) definitions for 2 schemas 1`] = `
{
  "definitions": {
    "Bar": {
      "description": "Desc",
      "examples": [
        "Ex",
      ],
      "properties": {
        "bar": {
          "exclusiveMinimum": 17,
          "type": "number",
        },
        "foo": {
          "$ref": "#/definitions/Foo",
        },
      },
      "required": [
        "bar",
      ],
      "title": "T",
      "type": "object",
    },
    "Foo": {
      "description": "Description",
      "examples": [
        "Example",
      ],
      "properties": {
        "foo": {
          "const": "bar",
          "type": "string",
        },
      },
      "title": "Title",
      "type": "object",
    },
  },
}
`;
